--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
