--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
