--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.3.1",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -27,6 +28,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -45,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
