--- a/package.json
+++ b/package.json
@@ -34,16 +34,19 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "framer-motion": "^12.0.11",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
