--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
