--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.2",
@@ -53,6 +54,8 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.15.0",
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
